--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "next-restaurants",
+  "author": "Guilherme Esdras",
+  "version": "1.0.0",
+  "description": "Restaurants app with Google Maps API",
+  "repository": "www.github.com/GuilhermeEsdras/next-restaurants",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,15 +12,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material/react-material-icon": "^0.15.0",
+    "@material/react-text-field": "^0.15.0",
+    "google-maps-react": "^2.0.6",
     "next": "12.0.3",
+    "polished": "^4.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-slick": "^0.28.1",
+    "react-switch": "^6.0.0",
+    "redux": "^4.1.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
+    "styled-normalize": "^8.0.7",
+    "styled-reset": "^4.3.4",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
-    "eslint": "7",
-    "eslint-config-next": "12.0.3",
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import-helpers": "^1.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.4.1",
     "typescript": "4.4.4"
   }
 }
